--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
                         <input type="password" id="login-password" placeholder="Enter your password" required>
+                        <i class="fas fa-eye-slash toggle-password" onclick="togglePass('login-password', this)"></i>
                     </div>
                     <p class="toggle-text" style="text-align: right; margin-top: -10px; margin-bottom: 15px;">
                         <span id="to-forgot" style="font-size: 0.8rem; opacity: 0.8;">Forgot Password? / ลืมรหัสผ่าน</span>
@@ -82,7 +83,11 @@
                     <label class="field-label">Email Address</label>
                     <div class="input-field"><i class="fas fa-envelope"></i><input type="email" id="reg-email" placeholder="example@domain.com"></div>
                     <label class="field-label">Password</label>
-                    <div class="input-field"><i class="fas fa-key"></i><input type="password" id="reg-password" placeholder="Create a password"></div>
+                    <div class="input-field">
+                        <i class="fas fa-key"></i>
+                        <input type="password" id="reg-password" placeholder="Create a password">
+                        <i class="fas fa-eye-slash toggle-password" onclick="togglePass('reg-password', this)"></i>
+                    </div>
                     <div class="meter-container"><div id="strength-bar"></div></div>
                     <button class="main-btn" id="register-btn">Register</button>
                     <p class="toggle-text">Already have an account? <span id="to-login">Login</span></p>
@@ -96,7 +101,11 @@
                     <div class="input-field"><i class="fas fa-envelope"></i><input type="email" id="forgot-email" placeholder="Enter email"></div>
                     <div id="reset-section" style="display: none;">
                         <label class="field-label">New Password</label>
-                        <div class="input-field"><i class="fas fa-lock"></i><input type="password" id="new-password" placeholder="New Password"></div>
+                        <div class="input-field">
+                            <i class="fas fa-lock"></i>
+                            <input type="password" id="new-password" placeholder="New Password">
+                            <i class="fas fa-eye-slash toggle-password" onclick="togglePass('new-password', this)"></i>
+                        </div>
                     </div>
                     <button class="main-btn" id="forgot-btn">Verify Account</button>
                     <p class="toggle-text"><span id="forgot-to-login">Back to Login</span></p>
